--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,11 +11,12 @@ body {
 body {
   padding: 0;
   margin: 0;
-  /*font-family: -apple-system, Poppins, sans-serif;*/
+  font-family: -apple-system, Poppins, sans-serif;
 }
 
 * {
   box-sizing: border-box;
+  font-family: -apple-system, Poppins, sans-serif !important;
   padding: 0;
   margin: 0;
 }
@@ -23,4 +24,35 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-weight: 300;
+  font-style: normal;
+  src: url("../assets/fonts/Poppins-Light.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-style: normal;
+  src: url("../assets/fonts/Poppins-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Poppins";
+  font-weight: 600;
+  font-style: normal;
+  src: url("../assets/fonts/Poppins-SemiBold.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Poppins";
+  font-weight: 700;
+  font-style: normal;
+  src: url("../assets/fonts/Poppins-Bold.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Poppins";
+  font-weight: 400;
+  font-style: italic;
+  src: url("../assets/fonts/Poppins-Italic.ttf") format("truetype");
 }
